<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameSummaryFragment">

    <TextView
            android:id="@+id/game_summary_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_summary_title"
            android:textAppearance="@style/PitkiotTitle"
            app:layout_constraintBottom_toTopOf="@+id/winner_loser_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/winner_loser_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="240dp"
            android:text="@string/winner_loser_text"
            android:textAppearance="@style/PitkiotSubtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

    <Button
            android:id="@+id/play_again_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:text="@string/another_game_btn"
            android:textAppearance="@style/PitkiotButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintStart_toEndOf="@+id/back_to_menu_btn"
            app:layout_constraintTop_toBottomOf="@+id/winner_loser_text" />

    <Button
            android:id="@+id/back_to_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="124dp"
            android:text="@string/back_to_menu_btn"
            android:textAppearance="@style/PitkiotButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/winner_loser_text" />

</androidx.constraintlayout.widget.ConstraintLayout>