<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.JoinGameFragment"
        android:background="@color/light_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/GameMediumWindowStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

    <TextView
            android:id="@+id/join_game_title"
            android:text="@string/join_game_title"
            style="@style/GameLargeTitleStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/player_nickname_edit_text"
            android:hint="@string/nickname_hint"
            style="@style/GameEditTextStyle"
            app:layout_constraintBottom_toTopOf="@+id/register_player_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_pin_edit_text" />

    <EditText
            android:id="@+id/game_pin_edit_text"
            android:hint="@string/game_pin_hint"
            style="@style/GameEditTextStyle"
            app:layout_constraintBottom_toTopOf="@+id/player_nickname_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/join_game_title" />

    <Button
            android:id="@+id/register_player_btn"
            android:text="@string/register_player_btn"
            style="@style/GameButtonStyle"
            android:layout_marginBottom="15dp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_nickname_edit_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>