<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/teams_display_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teams_display"
            android:textAppearance="@style/PitkiotSubtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061" />

    <TextView
            android:id="@+id/team_a_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_a"
            android:textAppearance="@style/PitkiotSubtitle"
            app:layout_constraintBottom_toTopOf="@+id/team_a_players_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.256"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teams_display_title"
            app:layout_constraintVertical_bias="0.784" />

    <TextView
            android:id="@+id/team_b_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_b"
            android:textAppearance="@style/PitkiotSubtitle"
            app:layout_constraintBottom_toTopOf="@+id/team_b_players_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toEndOf="@+id/team_a_list_title"
            app:layout_constraintTop_toBottomOf="@+id/teams_display_title"
            app:layout_constraintVertical_bias="0.784" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/team_a_players_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.563"
            tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/team_b_players_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toEndOf="@+id/team_a_players_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.563"
            tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>